--- a/.github/workflow/docker-image.yml
+++ b/.github/workflow/docker-image.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:       
 
 jobs:
   build:
@@ -31,8 +32,8 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/discord-bot:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot
 
     - name: Run Docker container
       run: |
-        docker run -d --name discord-bot -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} ${{ secrets.DOCKER_USERNAME }}/discord-bot:latest
+        docker run -d --name discord-bot -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot
