--- a/.github/workflow/docker-image.yml
+++ b/.github/workflow/docker-image.yml
@@ -1,18 +1,16 @@
 # .github/workflows/docker-image.yml
 # Made by Abhishek Bhatia
-# GitHub Actions workflow to build and run the Docker image for the Discord bot.
+# GitHub Actions workflow to build and push Docker image for the Discord bot.
 
-name: Build and Deploy Discord Bot
+name: Build and Deploy AbhiiouslyBot
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:       
 
 jobs:
-  build:
-
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +20,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Login to DockerHub
+    - name: Log in to Docker Hub
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
@@ -31,9 +29,10 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
+        context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot
+        tags: ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot:latest
 
     - name: Run Docker container
       run: |
-        docker run -d --name discord-bot -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot
+        docker run -d --name abhiiouslybot -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot:latest
