--- a/.github/workflow/docker-image.yml
+++ b/.github/workflow/docker-image.yml
@@ -8,33 +8,31 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: 
-  
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Generate build number
-      id: build_number
-      run: echo "BUILD_NUMBER=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v2
       with:
         context: .
         push: true
-        tags: |
-          abhiiously/abhiiouslybot:latest
-          abhiiously/abhiiouslybot:${{ env.BUILD_NUMBER }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot:latest
+
+    - name: Run Docker container
+      run: |
+        docker run -d --name abhiiouslybot -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} ${{ secrets.DOCKER_USERNAME }}/abhiiouslybot:latest
